--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,21 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container-fluid text-center">
+    <div class="container-domain">
       <h1>The Domain Name Generator</h1>
-      <p id="domain"></p>
-      <button class="btn btn-primary" id="btnGenerator">Generate domain</button>
+      <div class="domain-container">
+        <p id="domain"></p>
+      </div>
+      <button class="btn-generator" id="btnGenerator">Generate domain</button>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
